[gd_scene load_steps=2 format=3 uid="uid://bwhyhkp6r6n8b"]

[ext_resource type="Script" uid="uid://b8by4ntbhbhp6" path="res://scripts/cooked_tool.gd" id="1_kf0ps"]

[node name="CookedTool" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kf0ps")

[node name="ToolSprite" type="TextureRect" parent="."]
layout_mode = 1

[node name="IngredientsLabel" type="Label" parent="."]
layout_mode = 0
offset_top = -32.0
offset_right = 40.0
offset_bottom = -9.0
